--- a/agent/.env.template
+++ b/agent/.env.template
@@ -3,3 +3,6 @@ DJANGO_SETTINGS_MODULE="agent.settings"
 DJANGO_DEBUG=True
 SECRET_KEY="insecure-devjnz9&&+zo3i!j3)z_c-7xl&ti&26x02vokwx#uqlulu(wl_1ujagent"
 DATABASE_URL="postgres://django:supersecretagent@localhost:6543/agentapp"
+
+GOOGLE_CLOUD_PROJECT=your-project-id
+GOOGLE_CLOUD_LOCATION=us-central1
